--- a/css/style.css
+++ b/css/style.css
@@ -489,8 +489,16 @@ body {
   display: none;
   line-height: 120%;
 }
+.service-card__content-bottom {
+  display: flex;
+  justify-content: flex-end;
+}
 .service-card__close-btn {
+  display: none;
   position: relative;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
 }
 .service-card__close-btn::before {
   content: "";
@@ -527,6 +535,13 @@ body {
   }
 }
 
+.service-card--on-click .service-card__title:hover {
+  text-decoration: none;
+  cursor: default;
+}
+.service-card--on-click .service-card__close-btn {
+  display: block;
+}
 .service-card--on-click .service-card__content {
   justify-content: space-between;
   height: 100%;
@@ -605,22 +620,33 @@ body {
   color: #aeafb0;
   padding-top: 0;
 }
-@media (max-width: 800px) {
-  .pl-table__row {
-    gap: 30px;
-  }
-  .pl-table__row :not(:first-child) {
-    flex: 0 0 120px;
-  }
-}
-@media (max-width: 700px) {
-  .pl-table {
-    overflow-x: scroll;
-  }
-}
 @media (max-width: 650px) {
+  .pl-table {
+    font-size: 18px;
+  }
+  .pl-table > :first-child {
+    display: none;
+  }
+  .pl-table > :nth-of-type(2) {
+    padding-top: 0;
+  }
+  .pl-table__row {
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: space-between;
+  }
+  .pl-table__row :nth-child(2) {
+    text-align: left;
+    flex: 0 0 auto;
+    color: #aeafb0;
+  }
+  .pl-table__row :nth-child(3) {
+    text-align: right;
+    flex: 0 0 auto;
+    color: #aeafb0;
+  }
   .pl-table__row :first-child {
-    flex: 1 0 150px;
+    flex: 0 0 100%;
   }
 }
 
@@ -664,7 +690,7 @@ body {
   margin-bottom: 0;
 }
 .about-us__bottom {
-  margin-top: 130px;
+  margin-top: 100px;
   background-color: #ffd363;
   display: flex;
   justify-content: space-between;
@@ -677,6 +703,8 @@ body {
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: auto;
     row-gap: 80px;
+    -moz-column-gap: 20px;
+         column-gap: 20px;
     padding: 70px;
   }
 }
@@ -690,7 +718,7 @@ body {
     height: 400px;
   }
   .about-us__bottom {
-    margin-top: 90px;
+    margin-top: 60px;
   }
 }
 @media (max-width: 500px) {
@@ -700,6 +728,10 @@ body {
     grid-auto-rows: auto;
     row-gap: 80px;
     padding: 70px;
+  }
+  .about-us__steps {
+    flex-wrap: wrap;
+    gap: 30px;
   }
 }
 
@@ -728,8 +760,15 @@ body {
   line-height: 100%;
   font-weight: 400;
 }
-.step:last-of-type .step__line {
-  display: none;
+@media (min-width: 500px) {
+  .step:last-of-type .step__line {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .step__descr {
+    width: 230px;
+  }
 }
 
 .advantage-au {
@@ -740,45 +779,36 @@ body {
   text-align: center;
 }
 .advantage-au__img {
-  height: 64px;
-  width: 64px;
+  height: 50px;
+  width: 50px;
 }
 .advantage-au img {
   height: 100%;
   width: 100%;
 }
 .advantage-au__descr {
-  margin-top: 24px;
+  margin-top: 13px;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 103%;
-  max-width: 200px;
-}
-@media (max-width: 900px) {
-  .advantage-au__descr {
-    max-width: 180px;
-  }
+  max-width: 180px;
+  text-wrap: balance;
 }
 @media (max-width: 700px) {
   .advantage-au__descr {
     font-size: 16px;
     max-width: 150px;
     margin-top: 13px;
+    word-wrap: break-word;
   }
   .advantage-au__img {
     width: 50px;
     height: 50px;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 375px) {
   .advantage-au__descr {
-    font-size: 18px;
-    max-width: 150px;
-    margin-top: 18px;
-  }
-  .advantage-au__img {
-    width: 64px;
-    height: 64px;
+    font-size: 14px;
   }
 }
 
@@ -945,6 +975,23 @@ body {
 .contacts__tel {
   color: black;
 }
+@media (max-width: 850px) {
+  .contacts__container {
+    flex-direction: column;
+    gap: 80px;
+    align-items: center;
+    text-align: center;
+  }
+}
+@media (max-width: 500px) {
+  .contacts {
+    font-size: 18px;
+  }
+  .contacts__right {
+    flex-direction: column;
+    gap: 50px;
+  }
+}
 
 .social {
   display: flex;
@@ -957,6 +1004,11 @@ body {
 .social__icon img {
   width: 40px;
   height: 40px;
+}
+@media (max-width: 500px) {
+  .social {
+    gap: 30px;
+  }
 }
 
 .footer {
@@ -1013,6 +1065,18 @@ body {
 .footer__phone {
   padding-left: 35px;
   background: url("/img/icons/common/common__phone.svg") 0 center/20px 20px no-repeat;
+}
+@media (max-width: 1000px) {
+  .footer__container {
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 100px;
+  }
+}
+@media (max-width: 700px) {
+  .footer__container {
+    align-items: flex-start;
+  }
 }
 
 .footer-menu {
