--- a/scss/style.scss
+++ b/scss/style.scss
@@ -388,8 +388,16 @@ body {
     display: none;
     line-height: 120%;
   }
+  &__content-bottom {
+    display: flex;
+    justify-content: flex-end;
+  }
   &__close-btn {
+    display: none;
     position: relative;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
     &::before {
       content: "";
       position: absolute;
@@ -434,6 +442,15 @@ body {
   }
 }
 .service-card--on-click {
+  .service-card__title {
+    &:hover {
+      text-decoration: none;
+      cursor: default;
+    }
+  }
+  .service-card__close-btn {
+    display: block;
+  }
   .service-card__content {
     justify-content: space-between;
     height: 100%;
@@ -477,6 +494,7 @@ body {
   text-transform: uppercase;
   overflow-x: scroll;
   overflow-y: hidden;
+
   &__link {
     color: black;
     transition: text-shadow 0.3s;
@@ -490,6 +508,7 @@ body {
 .pl-table {
   color: black;
   font-size: 20px;
+
   &__row {
     display: flex;
     padding: 28px 0 20px 0;
@@ -513,23 +532,32 @@ body {
     color: $accent-grey;
     padding-top: 0;
   }
-  @media (max-width: 800px) {
-    &__row {
-      gap: 30px;
-      & :not(:first-child) {
-        flex: 0 0 120px;
-      }
-    }
-  }
-  @media (max-width: 700px) {
-    overflow-x: scroll;
-    &__row {
-    }
-  }
+
   @media (max-width: 650px) {
+    font-size: 18px;
+    & > :first-child {
+      display: none;
+    }
+    & > :nth-of-type(2) {
+      padding-top: 0;
+    }
     &__row {
+      flex-wrap: wrap;
+      gap: 30px;
+      justify-content: space-between;
+
+      & :nth-child(2) {
+        text-align: left;
+        flex: 0 0 auto;
+        color: $accent-grey;
+      }
+      & :nth-child(3) {
+        text-align: right;
+        flex: 0 0 auto;
+        color: $accent-grey;
+      }
       & :first-child {
-        flex: 1 0 150px;
+        flex: 0 0 100%;
       }
     }
   }
@@ -574,7 +602,7 @@ body {
     }
   }
   &__bottom {
-    margin-top: 130px;
+    margin-top: 100px;
     background-color: $accent-yellow;
     display: flex;
     justify-content: space-between;
@@ -587,6 +615,7 @@ body {
       grid-template-columns: 1fr 1fr;
       grid-auto-rows: auto;
       row-gap: 80px;
+      column-gap: 20px;
       padding: 70px;
     }
   }
@@ -600,7 +629,7 @@ body {
       height: 400px;
     }
     &__bottom {
-      margin-top: 90px;
+      margin-top: 60px;
     }
   }
   @media (max-width: 500px) {
@@ -610,6 +639,10 @@ body {
       grid-auto-rows: auto;
       row-gap: 80px;
       padding: 70px;
+    }
+    &__steps {
+      flex-wrap: wrap;
+      gap: 30px;
     }
   }
 }
@@ -637,9 +670,16 @@ body {
     line-height: 100%;
     font-weight: 400;
   }
-  &:last-of-type {
-    .step__line {
-      display: none;
+  @media (min-width: 500px) {
+    &:last-of-type {
+      .step__line {
+        display: none;
+      }
+    }
+  }
+  @media (max-width: 500px) {
+    &__descr {
+      width: 230px;
     }
   }
 }
@@ -649,46 +689,38 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
+
   &__img {
-    height: 64px;
-    width: 64px;
+    height: 50px;
+    width: 50px;
   }
   & img {
     height: 100%;
     width: 100%;
   }
   &__descr {
-    margin-top: 24px;
+    margin-top: 13px;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 103%;
-    max-width: 200px;
-  }
-  @media (max-width: 900px) {
-    &__descr {
-      max-width: 180px;
-    }
+    max-width: 180px;
+    text-wrap: balance;
   }
   @media (max-width: 700px) {
     &__descr {
       font-size: 16px;
       max-width: 150px;
       margin-top: 13px;
+      word-wrap: break-word;
     }
     &__img {
       width: 50px;
       height: 50px;
     }
   }
-  @media (max-width: 500px) {
+  @media (max-width: 375px) {
     &__descr {
-      font-size: 18px;
-      max-width: 150px;
-      margin-top: 18px;
-    }
-    &__img {
-      width: 64px;
-      height: 64px;
+      font-size: 14px;
     }
   }
 }
@@ -857,10 +889,26 @@ body {
   &__tel {
     color: black;
   }
+  @media (max-width: 850px) {
+    &__container {
+      flex-direction: column;
+      gap: 80px;
+      align-items: center;
+      text-align: center;
+    }
+  }
+  @media (max-width: 500px) {
+    font-size: 18px;
+    &__right {
+      flex-direction: column;
+      gap: 50px;
+    }
+  }
 }
 .social {
   display: flex;
   gap: 20px;
+
   &__icon {
     width: 40px;
     height: 40px;
@@ -868,6 +916,9 @@ body {
   &__icon img {
     width: 40px;
     height: 40px;
+  }
+  @media (max-width: 500px) {
+    gap: 30px;
   }
 }
 
@@ -925,6 +976,18 @@ body {
   &__phone {
     padding-left: 35px;
     background: url("/img/icons/common/common__phone.svg") 0 center / 20px 20px no-repeat;
+  }
+  @media (max-width: 1000px) {
+    &__container {
+      flex-direction: column-reverse;
+      align-items: center;
+      gap: 100px;
+    }
+  }
+  @media (max-width: 700px) {
+    &__container {
+      align-items: flex-start;
+    }
   }
 }
 .footer-menu {
