--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,7 @@ body {
 .top-menu {
   display: flex;
   align-items: center;
+  gap: 22px;
 }
 .top-menu__link {
   font-size: 18px;
@@ -236,42 +237,59 @@ body {
 .top-menu__link:hover {
   color: #ffd363;
 }
-.top-menu :not(:last-child) {
-  margin-right: 22px;
-}
 @media (max-width: 1000px) {
   .top-menu {
     display: none;
   }
 }
 
+.top-menu--burger-active {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+  background: #ffd363;
+  z-index: 80;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+}
+.top-menu--burger-active .top-menu__link {
+  font-size: 18px;
+  color: black;
+  letter-spacing: 0.56px;
+  transition: color 0.3s;
+  z-index: 90;
+  font-size: 22px;
+}
+.top-menu--burger-active .top-menu__link:hover {
+  color: #1b3764;
+}
+
 .burger-menu {
   display: none;
-  height: 2px;
-  width: 30px;
-  background-color: white;
   position: relative;
+  z-index: 100;
 }
-.burger-menu::after {
-  content: "";
-  position: absolute;
-  background-color: white;
-  top: 8px;
+.burger-menu span {
   height: 2px;
   width: 30px;
-}
-.burger-menu::before {
-  content: "";
-  position: absolute;
-  background-color: white;
-  top: -8px;
-  height: 2px;
-  width: 30px;
+  background-color: rgb(255, 255, 255);
 }
 @media (max-width: 1000px) {
   .burger-menu {
     display: flex;
+    flex-direction: column;
+    gap: 8px;
   }
+}
+
+.burger-menu--burger-active span {
+  background-color: rgb(0, 0, 0);
 }
 
 .promo {
