--- a/scss/style.scss
+++ b/scss/style.scss
@@ -121,6 +121,7 @@ body {
 .top-menu {
   display: flex;
   align-items: center;
+  gap: 22px;
 
   &__link {
     font-size: 18px;
@@ -132,38 +133,58 @@ body {
       color: $accent-yellow;
     }
   }
-  & :not(:last-child) {
-    margin-right: 22px;
-  }
+
   @media (max-width: 1000px) {
     display: none;
   }
 }
+.top-menu--burger-active {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+  background: $accent-yellow;
+  z-index: 80;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+
+  .top-menu__link {
+    font-size: 18px;
+    color: black;
+    letter-spacing: $letter-spacing;
+    transition: color 0.3s;
+    z-index: 90;
+    font-size: 22px;
+
+    &:hover {
+      color: $main-blue;
+    }
+  }
+}
 .burger-menu {
   display: none;
-  height: 2px;
-  width: 30px;
-  background-color: white;
   position: relative;
-  &::after {
-    content: "";
-    position: absolute;
-    background-color: white;
-    top: 8px;
-    height: 2px;
-    width: 30px;
-  }
-  &::before {
-    content: "";
-    position: absolute;
-    background-color: white;
-    top: -8px;
-    height: 2px;
-    width: 30px;
-  }
+  z-index: 100;
 
+  & span {
+    height: 2px;
+    width: 30px;
+    background-color: rgb(255, 255, 255);
+  }
   @media (max-width: 1000px) {
     display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+}
+.burger-menu--burger-active {
+  & span {
+    background-color: rgb(0, 0, 0);
   }
 }
 
