--- a/scss/style.scss
+++ b/scss/style.scss
@@ -526,11 +526,21 @@ body {
   gap: 60px;
   font-size: 24px;
   text-transform: uppercase;
-  overflow-x: scroll;
-  overflow-y: hidden;
   background-color: $accent-yellow;
   padding: 0 35px;
   height: 60px;
+  scrollbar-width: thin;
+  scrollbar-color: $accent-yellow $accent-yellow;
+
+  &::-webkit-scrollbar-track {
+    background: $accent-yellow;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: $accent-yellow;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background: $accent-yellow;
+  }
 
   &__link {
     color: black;
@@ -567,6 +577,10 @@ body {
       width: 100%;
       background-color: $main-blue;
     }
+  }
+  @media (max-width: 970px) {
+    overflow-x: scroll;
+    overflow-y: hidden;
   }
 }
 .pl-table {
@@ -1036,13 +1050,13 @@ body {
   &__right {
     display: flex;
     flex-direction: column;
+    width: 460px;
   }
   &__warning {
     margin-bottom: 20px;
   }
   &__map {
     margin-bottom: 30px;
-    flex: 1 1 auto;
   }
   &__map img {
     object-fit: cover;
@@ -1072,6 +1086,11 @@ body {
   @media (max-width: 700px) {
     &__container {
       align-items: flex-start;
+    }
+  }
+  @media (max-width: 560px) {
+    &__right {
+      width: 100%;
     }
   }
 }
