--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,6 +63,9 @@ body {
   font-size: 24px;
   font-weight: 700;
 }
+.overflow-hidden {
+  overflow: hidden;
+}
 
 // ---* Sections *---
 // --- Header ---
@@ -128,12 +131,10 @@ body {
     color: white;
     letter-spacing: $letter-spacing;
     transition: color 0.3s;
-
     &:hover {
       color: $accent-yellow;
     }
   }
-
   @media (max-width: 1000px) {
     display: none;
   }
@@ -170,6 +171,9 @@ body {
   display: none;
   position: relative;
   z-index: 100;
+  width: 30px;
+  height: 30px;
+  transition: all 0.3s;
 
   & span {
     height: 2px;
@@ -179,12 +183,27 @@ body {
   @media (max-width: 1000px) {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 8px;
   }
 }
 .burger-menu--burger-active {
+  gap: 0px;
+  position: relative;
+
   & span {
+    position: absolute;
     background-color: rgb(0, 0, 0);
+    transition: all 0.3s;
+  }
+  & span:nth-of-type(1) {
+    display: none;
+  }
+  & span:nth-of-type(2) {
+    transform: rotate(45deg);
+  }
+  & span:nth-of-type(3) {
+    transform: rotate(-45deg);
   }
 }
 
