--- a/scss/style.scss
+++ b/scss/style.scss
@@ -153,6 +153,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 40px;
+  animation: burgerMenuStart 0.5s forwards;
 
   .top-menu__link {
     font-size: 18px;
@@ -165,6 +166,14 @@ body {
     &:hover {
       color: $main-blue;
     }
+  }
+}
+@keyframes burgerMenuStart {
+  from {
+    background-color: $main-blue;
+  }
+  to {
+    background-color: $accent-yellow;
   }
 }
 .burger-menu {
@@ -624,6 +633,9 @@ body {
       border-bottom: none;
       padding-bottom: 0;
     }
+  }
+  & > :last-child {
+    color: $accent-grey;
   }
   &__row--top {
     color: $accent-grey;
